objects/RPS_Contact__x.object
<CustomObject>
    <fields>
        <fullName>RPS_Contact_Role_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Role__c</externalDeveloperName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>RIA</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Business Contact</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm External Wholesaler (Influencer)</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Investment Analyst</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Plan Consultant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm RFP Analyst</fullName>
                </value>
                <value>
                    <fullName>Auditor CPA</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>ERISA Attorney</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Analyst Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner External Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Fund Partner National Accounts Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider General Contact</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DB)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DC)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (NQ)</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrative Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrator</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Committee Member</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Compliance Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Consultant</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Day to Day Admin</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Executive</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor General Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Fiduciary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Status_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Status_Effective_Date__c</externalDeveloperName>
        <label>Contact Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Status_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Status__c</externalDeveloperName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Unique_ID_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Unique_ID__c</externalDeveloperName>
        <label>Contact Unique ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Converted_from_Lead_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Converted_from_Lead__c</externalDeveloperName>
        <label>Converted from Lead</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Date_Time_Inactivated_c__c</fullName>
        <externalDeveloperName>RPS_Date_Time_Inactivated__c</externalDeveloperName>
        <label>Date/Time Inactivated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Distribution_Sources_c__c</fullName>
        <externalDeveloperName>RPS_Distribution_Sources__c</externalDeveloperName>
        <label>Distribution Sources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Do_Not_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Do_Not_Contact__c</externalDeveloperName>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Do_Not_Mail_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Do_Not_Mail__c</externalDeveloperName>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Does_not_want_to_do_Business_with_JH__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Does_not_want_to_do_Business_with_JH__c</externalDeveloperName>
        <label>Does not want to do Business with JH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Due_Diligence_Process_c__c</fullName>
        <externalDeveloperName>RPS_Due_Diligence_Process__c</externalDeveloperName>
        <label>Due Diligence Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_E_Series_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_E_Series__c</externalDeveloperName>
        <label>Participant Engagement Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Elite_Advisor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Elite_Advisor__c</externalDeveloperName>
        <label>Elite Advisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Enterprise_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_Enterprise_Total_AUM__c</externalDeveloperName>
        <label>Enterprise Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Exec_Admin_c__c</fullName>
        <externalDeveloperName>RPS_Exec_Admin__c</externalDeveloperName>
        <label>Exec / Admin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_External_ID_c__c</fullName>
        <externalDeveloperName>RPS_External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_External_Sales_c__c</fullName>
        <externalDeveloperName>RPS_External_Sales__c</externalDeveloperName>
        <label>External Sales</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_FAM_Comments_c__c</fullName>
        <externalDeveloperName>RPS_FAM_Comments__c</externalDeveloperName>
        <label>FAM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Favorable_View_of_JHRPS_c__c</fullName>
        <externalDeveloperName>RPS_Favorable_View_of_JHRPS__c</externalDeveloperName>
        <inlineHelpText>Favorable View of JHRPS? (If not, try to obtain why)</inlineHelpText>
        <label>Favorable View of JHRPS?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Fee_for_Service_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Fee_for_Service__c</externalDeveloperName>
        <label>Fee for Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Fiduciary_Role_c__c</fullName>
        <externalDeveloperName>RPS_Fiduciary_Role__c</externalDeveloperName>
        <inlineHelpText>Fiduciary role (if yes, which type -- (3)(21), (3)(38), etc.)</inlineHelpText>
        <label>Fiduciary Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_First_Contract_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_First_Contract_Effective_Date__c</externalDeveloperName>
        <label>First Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Fraud_Account_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Fraud_Account_Flag__c</externalDeveloperName>
        <label>Fraud Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Fund_Preferences_DCIO_Relationships__c</fullName>
        <externalDeveloperName>RPS_Fund_Preferences_DCIO_Relationships__c</externalDeveloperName>
        <label>Fund Preferences/DCIO Relationships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Future_Prospect_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Future_Prospect__c</externalDeveloperName>
        <label>Future Prospect?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_GA_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_GA_Total_AUM__c</externalDeveloperName>
        <label>Signature Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Gender_c__c</fullName>
        <externalDeveloperName>RPS_Gender__c</externalDeveloperName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_House_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_House__c</externalDeveloperName>
        <label>House?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Import_File_Name_c__c</fullName>
        <externalDeveloperName>RPS_Import_File_Name__c</externalDeveloperName>
        <label>Import File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_In_ISC_Business_Plan_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_In_ISC_Business_Plan__c</externalDeveloperName>
        <label>In ISC Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_In_Prior_Year_ISC_Business_Plan_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_In_Prior_Year_ISC_Business_Plan__c</externalDeveloperName>
        <label>In Prior Year ISC Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Industry_Rating_c__c</fullName>
        <externalDeveloperName>RPS_Industry_Rating__c</externalDeveloperName>
        <label>Industry Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Prospect - No QP business</fullName>
                </value>
                <value>
                    <fullName>2 - Accommodator - 1 Plan</fullName>
                </value>
                <value>
                    <fullName>3 - Emerging - 2+ Plans or +$5M</fullName>
                </value>
                <value>
                    <fullName>4 - Specialist - 10+ Plans or +$40M</fullName>
                </value>
                <value>
                    <fullName>5 - Elite - 20+ Plans or + $100M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Influence_Rating_c__c</fullName>
        <externalDeveloperName>RPS_Influence_Rating__c</externalDeveloperName>
        <label>Influence Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Vote</fullName>
                </value>
                <value>
                    <fullName>No Vote/Influencer</fullName>
                </value>
                <value>
                    <fullName>Voting Member</fullName>
                </value>
                <value>
                    <fullName>Voting Member/Influencer</fullName>
                </value>
                <value>
                    <fullName>Key Decision Maker/Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Investment_Preferences_c__c</fullName>
        <externalDeveloperName>RPS_Investment_Preferences__c</externalDeveloperName>
        <label>Investment Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_JH_Core_Retention_c__c</fullName>
        <externalDeveloperName>RPS_JH_Core_Retention__c</externalDeveloperName>
        <label>JH Core Retention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No contract in last 3 years thus no term</fullName>
                </value>
                <value>
                    <fullName>1 - 2+ terms in last 3 years where FA retained as AOR</fullName>
                </value>
                <value>
                    <fullName>2 - 1 term in last 3 years where FA retained as AOR</fullName>
                </value>
                <value>
                    <fullName>3 - 2+ terms in last 3 years where FA lost plan</fullName>
                </value>
                <value>
                    <fullName>4 - 1 term in last 3 years where FA lost plan</fullName>
                </value>
                <value>
                    <fullName>5 - No terms in last 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_JH_Core_Sales_Momentum_c__c</fullName>
        <externalDeveloperName>RPS_JH_Core_Sales_Momentum__c</externalDeveloperName>
        <label>JH Core Sales Momentum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No evidence of interest in JH</fullName>
                </value>
                <value>
                    <fullName>2 - One or more proposals in last 3 years</fullName>
                </value>
                <value>
                    <fullName>3 - 1 active contract with JH</fullName>
                </value>
                <value>
                    <fullName>4 - 2-4 active contracts with JH</fullName>
                </value>
                <value>
                    <fullName>5 - 5+ active contracts with JH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_JH_MM_Sales_Momentum_c__c</fullName>
        <externalDeveloperName>RPS_JH_MM_Sales_Momentum__c</externalDeveloperName>
        <label>JH MM Sales Momentum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No evidence of interest in JH</fullName>
                </value>
                <value>
                    <fullName>2 - Generated 1 Opportunity in last 3 years</fullName>
                </value>
                <value>
                    <fullName>3 - One or more RFPs in last 3 years</fullName>
                </value>
                <value>
                    <fullName>4 - JH presented at Finals in last 3 years</fullName>
                </value>
                <value>
                    <fullName>5 - Closed business with JH in last 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_JH_Support_c__c</fullName>
        <externalDeveloperName>RPS_JH_Support__c</externalDeveloperName>
        <inlineHelpText>How can John Hancock help you grow your business?</inlineHelpText>
        <label>JH Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Key_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Key_Contact__c</externalDeveloperName>
        <label>Key Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Last_Contract_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Last_Contract_Effective_Date__c</externalDeveloperName>
        <label>Last Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Legacy_System_c__c</fullName>
        <externalDeveloperName>RPS_Legacy_System__c</externalDeveloperName>
        <label>Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satuit</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Line_of_Business_c__c</fullName>
        <externalDeveloperName>RPS_Line_of_Business__c</externalDeveloperName>
        <label>Line of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Manage_Duplicate_Contact_Activities__c</fullName>
        <externalDeveloperName>RPS_Manage_Duplicate_Contact_Activities__c</externalDeveloperName>
        <label>Manage Duplicate Contact Activities</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Market_Focus_c__c</fullName>
        <externalDeveloperName>RPS_Market_Focus__c</externalDeveloperName>
        <label>Market Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Marketing_Preferences_Verified_On_c__c</fullName>
        <externalDeveloperName>RPS_Marketing_Preferences_Verified_On__c</externalDeveloperName>
        <label>Marketing Preferences Verified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Marketing_Preferences_Verified_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Marketing_Preferences_Verified__c</externalDeveloperName>
        <label>Marketing Preferences Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Nickname_c__c</fullName>
        <externalDeveloperName>RPS_Nickname__c</externalDeveloperName>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_No_Primary_Business_Contact_Coverage__c</fullName>
        <externalDeveloperName>RPS_No_Primary_Business_Contact_Coverage__c</externalDeveloperName>
        <label>Number Primary Business Contact Coverage</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Number_of_Active_Contracts_c__c</fullName>
        <externalDeveloperName>RPS_Number_of_Active_Contracts__c</externalDeveloperName>
        <label>Number of Active Contracts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Number_of_Lives_in_Active_Contracts__c</fullName>
        <externalDeveloperName>RPS_Number_of_Lives_in_Active_Contracts__c</externalDeveloperName>
        <label>Number of Lives in Active Contracts</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Number_of_Plans_100M_c__c</fullName>
        <externalDeveloperName>RPS_Number_of_Plans_100M__c</externalDeveloperName>
        <label>Number of Plans &gt; 100M</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Number_of_Retirement_Plan_Clients_c__c</fullName>
        <externalDeveloperName>RPS_Number_of_Retirement_Plan_Clients__c</externalDeveloperName>
        <label>Number of Retirement Plan Clients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_On_service_Model_c__c</fullName>
        <externalDeveloperName>RPS_On_service_Model__c</externalDeveloperName>
        <label>On-service Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Open_to_Utilizing_JH_Prop_Investment__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Open_to_Utilizing_JH_Prop_Investment__c</externalDeveloperName>
        <inlineHelpText>Advisors who will entertain utilizing JH Investments in plan fund line-ups</inlineHelpText>
        <label>Open to Utilizing JH Prop Investments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Original_Lead_ID_c__c</fullName>
        <externalDeveloperName>RPS_Original_Lead_ID__c</externalDeveloperName>
        <label>Original Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Other_Business_c__c</fullName>
        <externalDeveloperName>RPS_Other_Business__c</externalDeveloperName>
        <inlineHelpText>Business Mix - Other</inlineHelpText>
        <label>Other Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Overall_Satisfaction_with_NYL_RPS_c__c</fullName>
        <externalDeveloperName>RPS_Overall_Satisfaction_with_NYL_RPS__c</externalDeveloperName>
        <label>Overall Satisfaction with NYL RPS</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Overall_satisfaction_with_DB_Actuary__c</fullName>
        <externalDeveloperName>RPS_Overall_satisfaction_with_DB_Actuary__c</externalDeveloperName>
        <label>Overall satisfaction with DB Actuary</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Override_Territory_Assignment_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Override_Territory_Assignment__c</externalDeveloperName>
        <label>Override Territory Assignment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Participant_Person_ID_c__c</fullName>
        <externalDeveloperName>RPS_Participant_Person_ID__c</externalDeveloperName>
        <label>Participant Person ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Partner_Affiliations_c__c</fullName>
        <externalDeveloperName>RPS_Partner_Affiliations__c</externalDeveloperName>
        <label>Third Party Vendor Affiliations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Envestnet</fullName>
                </value>
                <value>
                    <fullName>Fi360</fullName>
                </value>
                <value>
                    <fullName>GRPAA</fullName>
                </value>
                <value>
                    <fullName>Morningstar</fullName>
                </value>
                <value>
                    <fullName>RPAG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_PeopleSoft_ID_c__c</fullName>
        <externalDeveloperName>RPS_PeopleSoft_ID__c</externalDeveloperName>
        <label>PeopleSoft ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Percent_for_Retirement_Business_c__c</fullName>
        <externalDeveloperName>RPS_Percent_for_Retirement_Business__c</externalDeveloperName>
        <inlineHelpText>% of Business Mix for Retirement</inlineHelpText>
        <label>Percent for Retirement Business</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPS_Person_ID_c__c</fullName>
        <externalDeveloperName>RPS_Person_ID__c</externalDeveloperName>
        <label>Person ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Personal_Information_c__c</fullName>
        <externalDeveloperName>RPS_Personal_Information__c</externalDeveloperName>
        <label>Personal Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Plan_Types_c__c</fullName>
        <externalDeveloperName>RPS_Plan_Types__c</externalDeveloperName>
        <inlineHelpText>401k, 403b, Taft Hartley, Defined Benefit, etc.</inlineHelpText>
        <label>Plan Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Practice_and_Strategy_Overview_c__c</fullName>
        <externalDeveloperName>RPS_Practice_and_Strategy_Overview__c</externalDeveloperName>
        <inlineHelpText>How would you describe your practice and strategy for the future -- aggressively growing, status quo in servicing existing clients, etc?</inlineHelpText>
        <label>Practice and Strategy Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Product_Focus_c__c</fullName>
        <externalDeveloperName>RPS_Product_Focus__c</externalDeveloperName>
        <label>Product Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401(k)</fullName>
                </value>
                <value>
                    <fullName>403(b)</fullName>
                </value>
                <value>
                    <fullName>457</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit</fullName>
                </value>
                <value>
                    <fullName>I/O Only</fullName>
                </value>
                <value>
                    <fullName>Non Qual</fullName>
                </value>
                <value>
                    <fullName>Taft Hartley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Product_Preferences_c__c</fullName>
        <externalDeveloperName>RPS_Product_Preferences__c</externalDeveloperName>
        <label>Product Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>TRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Products_Held_c__c</fullName>
        <externalDeveloperName>RPS_Products_Held__c</externalDeveloperName>
        <label>Products Held</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_RVP_Number_of_Meetings_with_Advisor__c</fullName>
        <externalDeveloperName>RPS_RVP_Number_of_Meetings_with_Advisor__c</externalDeveloperName>
        <label>RVP # of Planned Meetings with Advisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Referenceable_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Referenceable_Effective_Date__c</externalDeveloperName>
        <label>Referenceable Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Referenceable_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Referenceable__c</externalDeveloperName>
        <label>Referenceable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Region_Branch_Number_c__c</fullName>
        <externalDeveloperName>RPS_Region_Branch_Number__c</externalDeveloperName>
        <label>Region/Branch Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Registered_for_FPR_site_access_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Registered_for_FPR_site_access__c</externalDeveloperName>
        <label>Registered for FPR site access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Relationship_Rating_c__c</fullName>
        <externalDeveloperName>RPS_Relationship_Rating__c</externalDeveloperName>
        <label>Relationship Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Not JH Fan</fullName>
                </value>
                <value>
                    <fullName>Credibility</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Influence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Responsiveness_c__c</fullName>
        <externalDeveloperName>RPS_Responsiveness__c</externalDeveloperName>
        <label>Responsiveness</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Sales_Territory_Division_c__c</fullName>
        <externalDeveloperName>RPS_Sales_Territory_Division__c</externalDeveloperName>
        <label>Sales Territory Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Mid-Central</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northeast-DC Metro</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Pacific Coast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Satuit_ID_c__c</fullName>
        <externalDeveloperName>RPS_Satuit_ID__c</externalDeveloperName>
        <label>Satuit ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Secondary_Role_c__c</fullName>
        <externalDeveloperName>RPS_Secondary_Role__c</externalDeveloperName>
        <label>Secondary Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5500 Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Seller_Status_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Seller_Status_Effective_Date__c</externalDeveloperName>
        <label>Seller Status Effective Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
</CustomObject>